link to git fixed

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -42,7 +42,7 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo '$TZ' | sudo tee -a /
 ENV DEBIAN_FRONTEND=dialog
 
 # Setup conda env
-RUN useradd -ms "/bin/bash -i" robot
+RUN useradd -ms "/bin/bash -i" --uid 1002 -g 1002 robot
 USER robot
 WORKDIR /home/robot
 RUN mkdir Desktop
