--- a/docker/lab-0-compose.yml
+++ b/docker/lab-0-compose.yml
@@ -3,6 +3,9 @@ services:
     build:
       context: ..
       dockerfile: docker/Dockerfile
+      args:
+        - userid=${userid}
+        - groupid=${groupid}
     container_name: lab-0-container
     environment:
       - DISPLAY=$DISPLAY
